# MyLists

./: .env.example  .gitattributes  .gitignore  .oxlintrc.json  BUGS.md  CHANGELOG.md  LICENSE  README.md  Run.py  TODO.md  app.config.ts  bunfig.toml  components.json  config.py  drizzle.config.ts  eslint.config.js  knip.json  logicToImplement.md  package.json  repomix-output.txt  requirements.txt  server.ts  todo  todo.txt  tsconfig.json  vite.cli.config.ts  vite.config.ts  vite.worker.config.ts
backend/: .flaskenv  config.py  db_schema.dbml  main.py  pyproject.toml  requirements.in  requirements.txt  run_tests.py  server.py
backend/api/: __init__.py  app.py
backend/api/classes/: API_data.py  Global_stats.py  Medialist_query.py
backend/api/core/: __init__.py  admin.py  auth.py  email.py  emails.py  errors.py  handlers.py  middleware.py  security.py
backend/api/data_managers/: api_data_manager.py  global_stats_manager.py  medialist_query_manager.py  stats_manager.py
backend/api/managers/: AchievementsManager.py  ApiManager.py  GlobalStatsManager.py  ListQueryManager.py  ListsStatsManager.py  MediaListQuery.py  MediaListSearchFilters.py  MediaListSmallFilters.py  ModelsManager.py  ProfileStatsManager.py  StatsManager.py  TasksManager.py  (+4 more)
backend/cli/: commands.py  demo_creator.py  tasks.py
backend/migrations/: alembic.ini  env.py  script.py.mako
backend/my_apifairy/: __init__.py  core.py  decorators.py
backend/tests/: base_test.py  test_auth.py  test_decorators.py  test_functions.py  test_media.py  test_models_user.py  test_route_auth.py  test_route_media.py  test_route_search.py  test_route_tokens.py  test_route_users.py  test_search.py  test_tasks.py  test_users.py
(+2307 files in other folders)
